将草块的贴图做好了。

--- a/src/main/resources/assets/study/lang/en_us.lang
+++ b/src/main/resources/assets/study/lang/en_us.lang
@@ -4,3 +4,4 @@ tile.chromite.name=Chromite
 item.chromeIngot.name=Chrome Ingot
 tile.chromeBlock.name=ChromeBlock
 itemGroup.Study=RE: ZERO - Study in Another World
+tile.grassBlock.name=Grass Block
